--- a/koji/angular.json
+++ b/koji/angular.json
@@ -68,7 +68,12 @@
           },
           "defaultConfiguration": "production"
         },
+        
         "serve": {
+          "options": {
+            "browserTarget": "koji:build",
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
