--- a/koji/package.json
+++ b/koji/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@popperjs/core": "^2.10.2",
+    "@types/axios": "^0.14.0",
+    "axios": "^0.23.0",
     "bootstrap": "^5.0.0-beta3",
+    "http": "^0.0.1-security",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
