--- a/koji/package.json
+++ b/koji/package.json
@@ -21,8 +21,9 @@
     "@popperjs/core": "^2.10.2",
     "@types/axios": "^0.14.0",
     "axios": "^0.23.0",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^5.1.3",
     "http": "^0.0.1-security",
+    "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
