--- a/koji/package.json
+++ b/koji/package.json
@@ -26,6 +26,7 @@
     "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "vazir-font": "^30.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
