--- a/koji/package.json
+++ b/koji/package.json
@@ -11,18 +11,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@material/menu": "^13.0.0",
     "@popperjs/core": "^2.10.2",
     "@types/axios": "^0.14.0",
+    "angular-material": "^1.2.3",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "http": "^0.0.1-security",
+    "material": "^0.4.3",
+    "ng-multiselect-dropdown": "^0.3.7",
     "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
